# change-driven-dev

./: .env.example  .gitignore  COPILOT_TASK.md  DEPLOYMENT.md  DOCKER.md  E2E_TEST_SUMMARY.md  EPIC_VERIFICATION.md  LOCAL_SETUP.md  Makefile  README.md  SERVICE_INSTALL.md  SERVICE_SETUP.md  SESSION_SUMMARY.md  STATUS.md  TODO.md  TYPE_FIXES.md  Taskfile.yml  change-driven-dev_COPILOT_TASKS.md  config.yaml.example  docker-compose.dev.yml  docker-compose.yml  setup-services.sh  validate.sh
.github/: copilot-instructions.md
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: e6e5369fb4d1_complete_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  artifacts.py  change_requests.py  gates.py  git.py  phase.py  projects.py  tasks.py  websocket.py
backend/app/core/: config.py  events.py  gates.py  logging_config.py  sandbox.py
backend/app/db/: __init__.py  dao.py  database.py  database_original.py  database_redesigned.py
backend/app/engines/: __init__.py  copilot_cli.py  engine_base.py
backend/app/models/: __init__.py  models.py
backend/app/services/: __init__.py  artifacts.py  git_service.py  orchestration.py
backend/docs/: DATABASE_MIGRATION.md  MIGRATION_IMPLEMENTATION.md  MIGRATION_QUICK_REF.md
backend/scripts/: migrate_existing_dbs.py
backend/tests/: __init__.py  conftest.py  test_api_artifacts.py  test_api_change_requests.py  test_api_projects.py  test_api_tasks.py  test_dao.py  test_migrations.py  test_sandbox.py
scripts/: dev.sh  (+5 more)
(+50 files in other folders)
